<resources>
    <string name="app_name">Doge Free Maker</string>
    <string name="Begin_with">Начать с кодом</string>
    <string name="Begin_without">Начать без кода</string>
    <string name="Check_Balance">Проверить баланс</string>
    <string name="Maining">Начать</string>
    <string name="Balance">Ваш баланс</string>
    <string name="Settings">Настройки</string>
    <string name="Share">Поделиться</string>
    <string name="SendPromo">Отправить промокод</string>
    <string name="Back">Назад</string>
    <string name="DescriptionTextShare">"Делитесь промокодом с дузьями и увеличивайте скорость майнинга с каждой активацией приложения.     Приложение активированное с вашим промокодом получит на свой стартовый баланся 500 DOGE.     "</string>
    <string name="YourPromo">Ваш промокод:</string>
    <string name="Activated">Активированных приложений:</string>
    <string name="Coeff">Коэффициент скорости:</string>
    <string name="Stop">Стоп</string>
    <string-array name="Language">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string name="Save">Сохранить</string>
    <string name="Your_Adress">Ваш адрес DOGE</string>
    <string name="Your_Money">Ваши средства будут автоматически зачислены на вышеуказанный адрес когда Ваш баланс достигнет 79000 DOGE.</string>
    <string name="Choose_Int_Lang">Выберите язык интерфейса</string>
    <string name="Success">Успешно</string>
    <string name="Fail">Неудача</string>
    <string name="Wrong_Promo">Неверный промо-код</string>
    <string name="Text_to_Share">Используй этот промокод и начни майнить Dogecoin! Мой промокод:</string>
    <string name="Exchange_Rates">Курсы валют</string>
    <string name="Convert_Btn">Узнать сейчас</string>
    <string name="Other_Text">Хотите узнать сумму вашего баланса в основных мировых валютах?</string>
    <string name="Your_Rate">Ваш курс</string>
    <string name="Menu">Меню</string>
    <string name="No_Internet_Connection">Нет соединения с интернетом</string>
    <string name="Alert_Title">Ошибка</string>
    <string name="Try_Again_Btn">Повторить попытку</string>
    <string name="DOGE_Rate">DOGE курс</string>
    <string name="Enter_Promo">Введите промокод и получите 500 DOGE на свой счёт</string>
    <string name="Have_no_promo">Нет промокода?</string>
    <string name="adUnitId" translatable="false">ca-app-pub-7985661347006943/9441939701</string>
    <string name="footer" translatable="false">ca-app-pub-7985661347006943~7217309032</string>
    <string name="banner" translatable="false">ca-app-pub-7985661347006943/3138463225</string>
</resources>
