<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.goggmago.DogeFreeMaker.CheckBalanceActivity">

    <Button
        android:id="@+id/BackFromBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="BackFromBalance"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/BigPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Balance"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />


    <TextView
        android:id="@+id/TextBalance"
        android:layout_width="382dp"
        android:layout_height="38dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/BigPrint"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/BalanceInOther"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Other_Text"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/TextBalance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Convert_Btn"
        android:onClick="TodayRate"
        android:background="@drawable/circle"
        app:layout_constraintTop_toBottomOf="@id/BalanceInOther"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/AdBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitId"
        />

</android.support.constraint.ConstraintLayout>
