<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.goggmago.DogeFreeMaker.ExRate">

    <Button
        android:id="@+id/BackFromExt"
        android:text="@string/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="BackFromExt"
        android:background="@drawable/circle"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/DogeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DOGE_Rate"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ExtText"
        />

    <TextView
        android:id="@+id/ExtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/AdExRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitId"
        />

</android.support.constraint.ConstraintLayout>
