<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="com.goggmago.DogeFreeMaker.ShareActivity">

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/Back"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:onClick="BackToMain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:background="@drawable/circle"/>


    <TextView
        android:id="@+id/MegaText"
        android:layout_width="wrap_content"
        android:layout_height="174dp"
        android:gravity="center"
        android:text="@string/DescriptionTextShare"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="@id/Back"
        app:layout_constraintTop_toBottomOf="@id/Back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/SendPromo"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:onClick="SendMyPromo"
        android:text="@string/SendPromo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/MegaText"
        android:background="@drawable/circle"/>

    <TextView
        android:id="@+id/YourPromo"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/SendPromo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/ActivatedApp"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/YourPromo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/Coeff"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/ActivatedApp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/AdShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitId"
        />

</android.support.constraint.ConstraintLayout>
